# TrainingTracker

./: README.md  pyproject.toml
src/: main.py
src/auth/: models.py  router.py  schemas.py
src/core/: config.py  db.py  security.py
